--- a/Resources/DesktopModules/SocialGroups/App_LocalResources/ListSettings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/SocialGroups/App_LocalResources/ListSettings.ascx.nl-NL.resx
@@ -1,5 +1,110 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -7,13 +112,13 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ControlTitle_settings.Text" xml:space="preserve">
-    <value>Groepsmodule instellingen</value>
+    <value>Groepenmodule instellingen</value>
   </data>
   <data name="DefaultRoleGroup.Help" xml:space="preserve">
     <value>Selecteer de rolgroep die de rollen bevat die je wilt weergeven</value>
@@ -22,7 +127,7 @@
     <value>Standaard rolgroep</value>
   </data>
   <data name="GroupCreatePage.Help" xml:space="preserve">
-    <value>Selecteer de pagina waar gebruikers naar toe gaan om nieuwe groepen aan te maken</value>
+    <value>Selecteer de pagina waar gebruikers naar toe gaan om nieuwe groepen aan te maken.</value>
   </data>
   <data name="GroupListEnableSearch.Help" xml:space="preserve">
     <value>Selecteer deze optie om de gebruikers de mogelijkheid te geven om op de weergegeven groepen te filteren.</value>
@@ -31,10 +136,10 @@
     <value>Zoeken op groep toestaan</value>
   </data>
   <data name="GroupListPageSize.Help" xml:space="preserve">
-    <value>Specificeer het aantal groepen dat word teruggegeven per pagina.</value>
+    <value>Specificeer het aantal groepen dat wordt weergegeven per pagina.</value>
   </data>
   <data name="GroupListPageSize.Text" xml:space="preserve">
-    <value>Paginagrootte van groepslijst</value>
+    <value>Paginagrootte van groepenlijst</value>
   </data>
   <data name="GroupListSortDirField.Help" xml:space="preserve">
     <value>Kies de sorteerrichting voor de lijst van groepen.</value>
@@ -49,23 +154,23 @@
     <value>Sorteer lijst op basis van</value>
   </data>
   <data name="GroupListTemplateText.Help" xml:space="preserve">
-    <value>Je kan het standaardsjabloon wijzigen om de weergave van de groepslijst aan te passen.  Gemeenschappelijke tokens zijn:&lt;br/&gt;
+    <value>Je kan het standaardsjabloon wijzigen om de weergave van de groepenlijst aan te passen.  Gemeenschappelijke tokens zijn:&lt;br/&gt;
 [groupitem:GroupName]&lt;br&gt;
 [groupitem:GroupDescription]&lt;br/&gt;
 [groupitem:PhotoURL]&lt;br/&gt;
 [groupviewurl]&lt;br/&gt;</value>
   </data>
   <data name="GroupListTemplateText.Text" xml:space="preserve">
-    <value>Groepslijstsjabloon</value>
+    <value>Groepenlijstsjabloon</value>
   </data>
   <data name="GroupListUserGroups.Help" xml:space="preserve">
-    <value>Selecteer deze optie om alleen de groepen weer te geven waar de huidige gebruiker bij hoort.</value>
+    <value>Selecteer deze optie om alleen die groepen te tonen, waar de huidige gebruiker lid van is.</value>
   </data>
   <data name="GroupListUserGroups.Text" xml:space="preserve">
-    <value>Toon een alleen de gebruiker zijn groepen</value>
+    <value>Toon enkel de groepen waar de gebruiker lid van is</value>
   </data>
   <data name="GroupModeration.Help" xml:space="preserve">
-    <value>Vink deze optie aan als nieuwe groepen moeten worden goedgekeurd</value>
+    <value>Vink deze optie aan als nieuwe groepen moeten worden goedgekeurd.</value>
   </data>
   <data name="GroupModeration.Text" xml:space="preserve">
     <value>Nieuwe groepen moeten worden goedgekeurd</value>
@@ -74,7 +179,7 @@
     <value>Selecteer de pagina waar gebruikers naar toe gaan om een bepaalde groep te bekijken</value>
   </data>
   <data name="GroupViewTemplateText.Help" xml:space="preserve">
-    <value>Je kan het standaardsjabloon wijzigen om de weergave van de groepslijst aan te passen.  Gemeenschappelijke tokens zijn:&lt;br/&gt;
+    <value>Je kan het standaardsjabloon wijzigen om de weergave van de groepenlijst aan te passen.  Gemeenschappelijke tokens zijn:&lt;br/&gt;
 [groupitem:GroupName]&lt;br&gt;
 [groupitem:GroupDescription]&lt;br/&gt;
 [groupitem:PhotoURL]&lt;br/&gt;
