--- a/Resources/DesktopModules/SocialGroups/App_LocalResources/SharedResources.nl-NL.resx
+++ b/Resources/DesktopModules/SocialGroups/App_LocalResources/SharedResources.nl-NL.resx
@@ -1,5 +1,110 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -7,16 +112,16 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Accessibility.Text" xml:space="preserve">
     <value>Toegankelijkheid</value>
   </data>
   <data name="AutoConfigure.Text" xml:space="preserve">
-    <value>Auto configureren</value>
+    <value>Configureren met standaard instellingen</value>
   </data>
   <data name="Cancel.Text" xml:space="preserve">
     <value>Annuleren</value>
@@ -43,14 +148,14 @@
     <value>Gefeliciteerd!  Je groep is goedgekeurd! Klik op de onderstaande link voor toegang tot je groep. &lt;br /&gt; &lt;br /&gt; &lt;a href="[groupitem:URL]"&gt; [groupitem:GroupName]&lt;/a&gt; &lt;br /&gt; &lt;br /&gt;</value>
   </data>
   <data name="GroupApprovedNotification.Subject" xml:space="preserve">
-    <value>De groep [groupitem:GroupName] is goedgekeurd.</value>
+    <value>De groep [groupitem:GroupName] is goedgekeurd</value>
   </data>
   <data name="GroupCreatedNotification.Body" xml:space="preserve">
     <value>&lt;b&gt;Groepsnaam:&lt;/b&gt; &lt;a href="[groupitem:URL]"&gt; [groupitem:GroupName]&lt;/a&gt; &lt;br /&gt; &lt;b&gt;Beschrijving:&lt;/b&gt; [groupitem:Description] &lt; br / &gt; &lt;b&gt;Groepstype:&lt;/b&gt; [groupitem:GroupType] &lt;br /&gt; &lt;b&gt;Groepmaker:&lt;/b&gt; [groupitem:GroupCreatorName] &lt;br /&gt;
 </value>
   </data>
   <data name="GroupCreatedNotification.Subject" xml:space="preserve">
-    <value>De groep [groupitem:GroupName] is aangemaakt.</value>
+    <value>De groep [groupitem:GroupName] is aangemaakt</value>
   </data>
   <data name="GroupEditUrl.Text" xml:space="preserve">
     <value>&lt;a href="{0}"&gt;Groep wijzigen&lt;/a&gt;</value>
@@ -77,7 +182,7 @@
                 &lt;/div&gt;</value>
   </data>
   <data name="GroupMemberApprovedNotification.Body" xml:space="preserve">
-    <value>Je verzoek om lid te worden van &lt;a href="[groupitem:URL]"&gt;[groupitem:GroupName]&lt;/a&gt; is goedgekeurd</value>
+    <value>Jouw verzoek om lid te worden van &lt;a href="[groupitem:URL]"&gt;[groupitem:GroupName]&lt;/a&gt; is goedgekeurd.</value>
   </data>
   <data name="GroupMemberApprovedNotification.Subject" xml:space="preserve">
     <value>Welkom bij [groupitem:GroupName]!</value>
@@ -89,7 +194,7 @@
     <value>[DisplayName] wil lid worden van [groupitem:GroupName]</value>
   </data>
   <data name="GroupMemberRejectedNotification.Body" xml:space="preserve">
-    <value>Tot onze spijt delen wij je mede dat je verzoek om lid te worden van &lt;b&gt;[groupitem:GroupName]&lt;/b&gt; op dit moment afgewezen is.</value>
+    <value>Tot onze spijt delen wij je mede dat jouw verzoek om lid te worden van &lt;b&gt;[groupitem:GroupName]&lt;/b&gt; op dit moment afgewezen is.</value>
   </data>
   <data name="GroupMemberRejectedNotification.Subject" xml:space="preserve">
     <value>Antwoord op je vraag om lid te worden van [groupitem:GroupName]</value>
@@ -98,16 +203,16 @@
     <value>De naam is ongeldig - Rollen mogen alleen de volgende karakters bevatten  &amp; $ + , / ? ~ # &lt; &gt; ( ) ¿ ¡ « » !  . :  * ' [ ]</value>
   </data>
   <data name="GroupName.Required" xml:space="preserve">
-    <value>Groepsnaam is vereist.</value>
+    <value>De groepsnaam is een verplicht.</value>
   </data>
   <data name="GroupName.Text" xml:space="preserve">
     <value>Groepsnaam</value>
   </data>
   <data name="GroupNameDuplicate.Text" xml:space="preserve">
-    <value>De naam die je heeft opgegeven is al in gebruik.</value>
+    <value>De gekozen naam is al in gebruik.</value>
   </data>
   <data name="GroupPendingNotification.Body" xml:space="preserve">
-    <value>&lt;b&gt;Groepsnaam:&lt;/b&gt; &lt;a href="[groupitem:URL]" target="_blank"&gt; [groupitem:GroupName]&lt;/a&gt; &lt;br /&gt; &lt;b&gt;Beschrijving:&lt;/b&gt; [groupitem:Description] &lt; br /&gt; &lt;b&gt;groepstype:&lt;/b&gt; [groupitem:GroupType] &lt; br /&gt; &lt;b&gt;groep Maker:&lt;/b&gt;[groupitem:GroupCreatorName] &lt; br /&gt;</value>
+    <value>&lt;b&gt;Groepsnaam:&lt;/b&gt; &lt;a href="[groupitem:URL]" target="_blank"&gt; [groupitem:GroupName]&lt;/a&gt; &lt;br /&gt; &lt;b&gt;Beschrijving:&lt;/b&gt; [groupitem:Description] &lt; br /&gt; &lt;b&gt;Groepstype:&lt;/b&gt; [groupitem:GroupType] &lt; br /&gt; &lt;b&gt;Groepsbeheerder:&lt;/b&gt;[groupitem:GroupCreatorName] &lt; br /&gt;</value>
   </data>
   <data name="GroupPendingNotification.Subject" xml:space="preserve">
     <value>De groep [groupitem:GroupName] is in afwachting van goedkeuring.</value>
@@ -119,13 +224,13 @@
     <value>Groepsafbeelding</value>
   </data>
   <data name="GroupRejectedNotification.Body" xml:space="preserve">
-    <value>Tot onze spijt delen wij je mede dat je verzoek voor het aanmaken van de &lt;b&gt;[groupitem:GroupName]&lt;/b&gt; groep, op dit moment afgewezen is.</value>
+    <value>Tot onze spijt delen wij je mede dat jouw verzoek voor het aanmaken van de &lt;b&gt;[groupitem:GroupName]&lt;/b&gt; groep, op dit moment afgewezen is.</value>
   </data>
   <data name="GroupRejectedNotification.Subject" xml:space="preserve">
-    <value>Je verzoek voor de aanmaak van een nieuwe groep is afgewezen</value>
+    <value>Jouw verzoek voor het aanmaken van een nieuwe groep is afgewezen</value>
   </data>
   <data name="GroupSearch.Required" xml:space="preserve">
-    <value>Zoekterm benodigd.</value>
+    <value>Zoekterm invullen</value>
   </data>
   <data name="GroupViewTemplate.Text" xml:space="preserve">
     <value>&lt;div class="GroupViewTop"&gt;
@@ -165,7 +270,7 @@
     <value>leden</value>
   </data>
   <data name="MembersMustBeApproved.Text" xml:space="preserve">
-    <value>&lt;b&gt;Nieuwe leden goedkeuren:&lt;/b&gt;Gebruikers moeten lidmaatschap van deze groep aanvragen, en aanvragen moeten goedgekeurd worden door een groepsmanager.</value>
+    <value>&lt;b&gt;Nieuwe leden goedkeuren:&lt;/b&gt;Gebruikers moeten het lidmaatschap van deze groep aanvragen, en deze aanvragen moeten goedgekeurd worden door een groepsbeheerder.</value>
   </data>
   <data name="NoGroupsFound.Text" xml:space="preserve">
     <value>Er zijn geen groepen gevonden</value>
@@ -174,19 +279,19 @@
     <value>Lidmaatschap nog niet goedgekeurd</value>
   </data>
   <data name="photos.Text" xml:space="preserve">
-    <value>foto 's</value>
+    <value>foto's</value>
   </data>
   <data name="posts.Text" xml:space="preserve">
     <value>berichten</value>
   </data>
   <data name="Private.Help" xml:space="preserve">
-    <value>(alleen leden kunnen zien)</value>
+    <value>(alleen leden kunnen de groep zien)</value>
   </data>
   <data name="Private.Text" xml:space="preserve">
     <value>Privé</value>
   </data>
   <data name="Public.Help" xml:space="preserve">
-    <value>(iedereen kan zien en lid worden)</value>
+    <value>(iedereen kan de groep zien en lid worden)</value>
   </data>
   <data name="Public.Text" xml:space="preserve">
     <value>Publiek</value>
@@ -204,7 +309,7 @@
     <value>Geeft verplichte velden aan</value>
   </data>
   <data name="Sample_RoleDescription.Text" xml:space="preserve">
-    <value>Dit is de omschrijving voor de steekproef groep.  Deze groep bestaat niet echt.  Je ziet dit omdat je de module voor de eerste keer instelt of je sitebeheerder bent en navigeren naar deze pagina zonder een groeps-id.</value>
+    <value>Dit is de omschrijving voor de voorbeeld groep.  Deze groep bestaat niet echt.  Je ziet dit omdat je de module voor de eerste keer instelt of je sitebeheerder bent en navigeren naar deze pagina zonder een groeps-id.</value>
   </data>
   <data name="Sample_RoleName.Text" xml:space="preserve">
     <value>Voorbeeld sociale groep</value>
@@ -216,6 +321,6 @@
     <value>Setup sociale groepen</value>
   </data>
   <data name="SetupIntro.Text" xml:space="preserve">
-    <value>De sociale groepen module stelt gebruikers in staat om door groepen te bladeren, te bekijken en te maken.  De beste manier om de module configureren is het creëren van een pagina voor het bladern door de groepen en een andere pagina voor het weergeven van groepsdetails.  Je kan de module zelf configureren, of je kunt op "Auto configuratie" knop hieronder klikken.  &lt;br /&gt; &lt;br /&gt; &lt;b&gt;We raden aan de optie "Auto configuratie" te gebruiken als je niet bekend bent met de module.&lt;/b&gt;</value>
+    <value>De sociale groepen module stelt gebruikers in staat om door groepen te bladeren, te bekijken en te maken.  De beste manier om de module te configureren is het creëren van een landingspagina voor het bladern door de groepen en een andere pagina voor het weergeven van groepsdetails.  Je kan de module zelf configureren, of je kunt de knop "Configureren met standaard instellingen" gebruiken.  &lt;br /&gt; &lt;br /&gt; &lt;b&gt;We raden je aan de optie "Configureren met standaard instellingen" te gebruiken, als je niet bekend bent met de module.&lt;/b&gt;</value>
   </data>
 </root>
